--- a/index.html
+++ b/index.html
@@ -27,30 +27,30 @@
     <ol class="introduction ">
             <li>সূচিপত্র:-</li></br>
                 <ul class="list">
-                    <li>সূচনা</li>
-                    <li>Carding</li>
-                    <li>Bin</li>
-                    <li>Types of Card</li>
-                    <li>Master Card</li>
-                    <li>Visa Card</li>
-                    <li>Amex Card</li>
-                    <li>Discover Card</li>
-                    <li>How to identify Bin</li>
-                    <li>CCN/CC/CN</li>
-                    <li>Exp</li>
-                    <li>CVV/CVC/CSC/CVD/CCV/CCVC/CID</li>
-                    <li>Card Holder Name</li>
-                    <li>Best Channels for Bin</li>
-                    <li>Multifunctional Bin</li>
-                    <li>3DS</li>
-                    <li>Vbv/Msc/Amex Code Card</li>
-                    <ul>AVs</ul>
-                    <ul>CC Generator</ul>
-                    <ul>CC Checker</ul>
-                    <ul>Live CC</ul>
-                    <ul>Browser & VPN for Bin</ul>
-                    <ul>CCN বা Live CCV</ul>
-                    <ul>Bug Bin</ul>
+                    <li>1.  সূচনা</li>
+                    <li>2.  Carding</li>
+                    <li>3.  Bin</li>
+                    <li>4.  Types of Card</li>
+                    <li>5.  Master Card</li>
+                    <li>6.  Visa Card</li>
+                    <li>7.  Amex Card</li>
+                    <li>8.  Discover Card</li>
+                    <li>9.  How to identify Bin</li>
+                    <li>10. CCN/CC/CN</li>
+                    <li>11. Exp</li>
+                    <li>12. CVV/CVC/CSC/CVD/CCV/CCVC/CID</li>
+                    <li>13. Card Holder Name</li>
+                    <li>14. Best Channels for Bin</li>
+                    <li>15. Multifunctional Bin</li>
+                    <li>16. 3DS</li>
+                    <li>17. Vbv/Msc/Amex Code Card</li>
+                    <ul>18. AVs</ul>
+                    <ul>19. CC Generator</ul>
+                    <ul>20. CC Checker</ul>
+                    <ul>21. Live CC</ul>
+                    <ul>21. Browser & VPN for Bin</ul>
+                    <ul>22. CCN বা Live CCV</ul>
+                    <ul>23. Bug Bin</ul>
                 </ul>     
              </ol>
              </br>
